--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
           <h3>Install &amp; Setup</h3>
 
-          <p><a href="#">Download the files</a> and include jQuery and prettyCheckable files:</p>
+          <p><a href="https://github.com/downloads/arthurgouveia/prettyCheckable/prettyCheckable-1.0.zip" target="_blank">Download the files</a> and include jQuery and prettyCheckable files:</p>
 
           <pre class="prettyprint lang-html">
 &lt;link rel=&quot;stylesheet&quot; href=&quot;js/prettyCheckable/prettyCheckable.css&quot;&gt;
@@ -358,7 +358,7 @@ $().ready(function(){
 
           <h3>Customization</h3>
 
-          <p>If you want to create your own designed checkboxes or you just need a different color set, download the <a href="/goodies/prettyCheckable.js">prettyCheckable PSD</a>, do whatever you need to, add the entries to your CSS and pass the name of your color/style in the <strong>color</strong> or <strong>customClass</strong> parameters, according to the CSS code you can see on <a href="/js/prettyCheckable.css">prettyCheckable.css</a></p>
+          <p>If you want to create your own designed checkboxes or you just need a different color set, download the <a href="goodies/prettyCheckable.js">prettyCheckable PSD</a>, do whatever you need to, add the entries to your CSS and pass the name of your color/style in the <strong>color</strong> or <strong>customClass</strong> parameters, according to the CSS code you can see on <a href="js/prettyCheckable/prettyCheckable.css">prettyCheckable.css</a></p>
 
         </div>
 
