Google analytics and Jasmine observation

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
               <h3>Jasmine tests results:</h3>
+              <em>If you see a failure, please refresh as Jasmine might run before the plugin finishes.</em>
             </div>
             <div class="modal-body" id="jasmineTests">
             </div>
@@ -390,11 +391,18 @@ $().ready(function(){
     <script src="js/prettyCheckable/prettyCheckable.js"></script>
     <script src="js/main.js"></script>
 
-    <script>
-        var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-35059120-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
     </script>
 
   </body>
