--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>jQuery prettyCheckable</title>
+    <title>Style checkbox and radio - jQuery Plugin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="jQuery plugin to replace checkboxes and radios for custom images">
+    <meta name="description" content="jQuery plugin to replace and style checkboxes and radios. Beautiful checkboxes and radios a few lines away">
     <meta name="author" content="Arthur Gouveia">
+    <meta name="keywords" content="jQuery, Javascript, Plugin, checkbox, radio, style, beautiful checkbox, beautiful radio, simple">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
