Changing the picture that shows up on facebook

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="jQuery plugin to replace and style checkboxes and radios. Beautiful checkboxes and radios a few lines away">
     <meta name="author" content="Arthur Gouveia">
     <meta name="keywords" content="jQuery, Javascript, Plugin, checkbox, radio, style, beautiful checkbox, beautiful radio, simple">
+    <meta name="og:image" content="https://secure.gravatar.com/avatar/1bbd6316097511709d3b9c7a6f6cca41?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
