Adding another link to the PSD

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <p>Features:
             <ul>
               <li>Custom design, kindly provided by <a href="http://ilustrebob.com.br/" target="_blank">Bruno O. Barros</a>;</li>
-              <li>Four color options (Twitter bootstrap) + editable PSD;</li>
+              <li>Four color options (Twitter bootstrap) + <a href="goodies/prettyCheckable.psd">editable PSD</a>;</li>
               <li>Better look & size;</li>
               <li>Super easy implementation;</li>
               <li>Selectable with Tab and checkable with keyboard;</li>
