--- a/index.html
+++ b/index.html
@@ -78,15 +78,13 @@
           <p>
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://arthurgouveia.com/prettyCheckable" data-lang="en" data-via="ArthurGouveia" data-text="Nice jQuery plugin to customize the look&feel of checkboxes and radios: prettyCheckable">Tweet</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-          </p>
-
-          <p>
+          
             <a href="https://twitter.com/ArthurGouveia" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @ArthurGouveia</a>
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </p>
 
           <p>
-            <div class="fb-like" data-href="http://arthurgouveia.com/prettyCheckable" data-send="true" data-width="400" data-show-faces="true" data-font="verdana"></div>
+            <div class="fb-like" data-href="http://arthurgouveia.com/prettyCheckable" data-send="true" data-width="400" data-show-faces="false" data-font="verdana"></div>
           </p>
 
           <div class="modal hide fade" id="thanks" tabindex="-1" role="dialog"  aria-hidden="true">
