--- a/index.html
+++ b/index.html
@@ -144,7 +144,6 @@
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
               <h3>Jasmine tests results:</h3>
-              <em>If you see a failure, please refresh as Jasmine might run before the plugin finishes.</em>
             </div>
             <div class="modal-body" id="jasmineTests">
             </div>
@@ -392,7 +391,7 @@ $().ready(function(){
 
       <hr>
 
-      <a href="https://github.com/arthurgouveia"><img style="position: absolute; top: 40px; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
+      <a href="https://github.com/arthurgouveia"><img style="position: absolute; top: 40px; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
       <footer>
         <p class="pull-left">
