Adding line describing browser compatibility

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
           <p>Features:
             <ul>
+              <li>Compatible with IE7+, Chrome, Firefox, Safari and mobile browsers;</li>
               <li>Custom design, kindly provided by <a href="http://ilustrebob.com.br/" target="_blank">Bruno O. Barros</a>;</li>
               <li>Four color options (Twitter bootstrap) + <a href="goodies/prettyCheckable.psd">editable PSD</a>;</li>
               <li>Better look & size;</li>
