--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Style checkbox and radio - jQuery Plugin</title>
+    <title>Style checkbox and radio - prettyCheckable jQuery Plugin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="jQuery plugin to replace and style checkboxes and radios. Beautiful checkboxes and radios a few lines away">
     <meta name="author" content="Arthur Gouveia">
