--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
 
           <h3>Example</h3>
 
-          <div class="well">
+          <form class="well">
 
             <div class="input-wrapper">
-              <input type="checkbox" class="prettyCheckable" value="1" id="Test1" name="Test1" data-label="Right positioned label (no param)" />
+              <input type="checkbox" class="prettyCheckable" value="1" id="Test1" name="Test1" data-label="Right positioned label (no param)" checked/>
             </div>
 
             <div class="input-wrapper">
@@ -239,7 +239,7 @@
 
             </div>
 
-          </div>
+          </form>
 
         </div>
 
