--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="js/prettyCheckable/dist/prettyCheckable.css">
+    <link rel="stylesheet" href="/js/prettyCheckable/dist/prettyCheckable.css">
 
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -477,7 +477,7 @@ $('#myInput').prettyCheckable('check');
     <script src="js/bootstrap-transition.js"></script>
     <script src="js/bootstrap-modal.js"></script>
     <script src="js/bootstrap-tab.js"></script>
-    <script src="js/prettyCheckable/prettyCheckable.js"></script>
+    <script src="js/prettyCheckable/dist/prettyCheckable.min.js"></script>
     <script src="js/main.js"></script>
 
     <script type="text/javascript">
